test_regress/t/t_inst_misarray_bad.out
%Error: t/t_inst_misarray_bad.v:17:23: Illegal assignment: 'logic' is not assignment compatible with 'logic$[3:0]'
                                     : ... note: In instance 't'
   17 |                      .foo(foo));   
      |                       ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
